creusot/tests/should_fail/prusti/deny_zombies/var.stderr
error: T@'curr cannot be moved to 'old since it isn't copy
       otherwise it would become a zombie
 --> var.rs:5:20
  |
5 | #[ensures(old(x == result))]
  |                    ^^^^^^
  |
note: the lint level is defined here
 --> var.rs:1:9
  |
1 | #![deny(creusot::prusti_zombie)]
  |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

thread 'main' panicked at 'called `Result::unwrap()` on an `Err` value: ErrorGuaranteed(())', cargo-creusot/src/bin/creusot-rustc.rs:136:55
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

note: Creusot has panic-ed!
  |
  = note: Oops, that shouldn't have happened, sorry about that.
  = note: Please report this bug over here: https://github.com/xldenis/creusot/issues/new

